--- a/_config.yml
+++ b/_config.yml
@@ -10,3 +10,35 @@ github_username: hejtmy
 
 # Build settings
 markdown: kramdown
+
+colors:  #in hex code if not noted else
+  primary: "#F05F40" #"#222"
+  primary_rgb: "240,95,64" #"247,0,49" #rgb of the primary. Needed in some places for the transparency effect.
+  secondary: "#384452" #"#33004D"
+  link: "#428bca"
+  link_hover: "#01b2fe"
+  footer_heading: "#ffffff"
+  footer_content: "#bfc9d3"
+
+# Social networks usernames. Many more available: google-plus, flickr, linkedin, etc). Shown in footer.
+social:
+  - title: github
+    url: http:\\github.com\hejtmy
+  - title: facebook
+    url: http:\\facebook.com\hejtmy
+  - title: google-plus
+    url: http:\\plus.google.com\hejtmy
+  - title: twitter
+    url: http:\\twitter.com\hejtmy_
+
+    # Members information. Shown on About page.
+members:
+  - name: Lukáš Hejtmánek
+    position: CEO of my life
+    text: The guy this page is about
+    img: team01.jpg
+    social:
+      - title: envelope #use for email address
+        url: mailto:hejtmy@gmail.com
+      - title: twitter
+        url: http:\\twitter.com\hejtmy_
