--- a/_config.yml
+++ b/_config.yml
@@ -8,6 +8,7 @@ url: "" # the base hostname & protocol for your site
 # Build settings
 markdown: kramdown
 
+permalink: /:categories/:title
 # Social networks usernames. Many more available: google-plus, flickr, linkedin, etc). Shown in footer.
 social:
   - title: github
