--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
 language: ruby
 rvm:
 - 2.3.1
+install:
+- ./bin/setup
 script:
 - bundle exec jekyll build --trace
 - bundle exec htmlproofer ./_site --only-4xx --allow-hash-href
